修改 swagger domain
